--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -51,6 +51,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f370d8c1-c1a8-46a9-bb75-c9386068156a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xsarsea.windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fbe38d74",
    "metadata": {},
    "outputs": [],
@@ -64,7 +74,7 @@
     "sar_ds = xsar.open_dataset(filename,resolution='100m').isel(line=slice(20,None,None),sample=slice(20,None,None)) # isel to skip bad image edge\n",
     "\n",
     "# add detrended sigma0\n",
-    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence)\n",
+    "sar_ds['sigma0_detrend'] = xsarsea.sigma0_detrend(sar_ds.sigma0, sar_ds.incidence, model = \"gmf_cmod5n\")\n",
     "# apply land mask\n",
     "land_mask = sar_ds['land_mask'].compute()\n",
     "sar_ds['sigma0_detrend'] = xr.where(land_mask, np.nan, sar_ds['sigma0_detrend']).transpose(*sar_ds['sigma0_detrend'].dims).compute()\n"
@@ -128,7 +138,7 @@
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convention\n",
-    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_geo(streaks['angle'], streaks_geo['ground_heading']) \n",
+    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_geo(np.rad2deg(streaks['angle']), streaks_geo['ground_heading']) \n",
     "\n",
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
@@ -142,6 +152,14 @@
     "    )\n",
     ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4866732c-a366-4c45-ae06-aa271b8992c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -342,6 +360,14 @@
     "\n",
     "gridspace.opts(plot_size=(200,200)) + (hv_img * hv_vf).opts(legend_position='right', frame_height=500)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a762fdcb-ed24-4917-8004-d6ffee51ed25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
