--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -11,6 +11,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "983cebef-95b2-48f1-9708-aa9ad762b787",
+   "metadata": {},
+   "source": [
+    "> .. warning::\n",
+    "   **Use of ancillary wind**\n",
+    "\n",
+    "> We suggest to go from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `sarwing_ds.owi_ancillary_wind`` ; then it won't match sarwing results anymore\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7136c9bf-eeba-42bc-b255-08cdc5710752",
@@ -159,6 +171,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e98f14a-90e1-4cd4-9d8b-1faf7fa11ca8",
+   "metadata": {},
+   "source": [
+    "### luts resolution params :\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b74ab2f-4413-4fa7-ad30-9df5d73bba97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kwargs = {\"wspd_step\" : 0.1, \"inc_step\" : 0.1, \"phi_step\" : 1.0, \"resolution\": \"high\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd1d2343-1c8b-4ca3-922d-77589e4c1200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4128cac-1f6c-4db0-a3ed-4908fa3ec7ee",
    "metadata": {},
    "source": [
@@ -178,7 +218,8 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs,\n",
     "        ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind),\n",
-    "        model='nc_lut_gmf_cmod5n')\n",
+    "        model='gmf_cmod5n',\n",
+    "        **kwargs)\n",
     "windspeed_co = np.abs(wind_co)"
    ]
   },
@@ -188,16 +229,6 @@
    "metadata": {},
    "source": [
     "## differences with sarwing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83e827c2-f5e0-4719-9463-790aed44d93d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sarwing_ds.sel(line=152).sel(sample=59).owiHeading.values"
    ]
   },
   {
@@ -278,9 +309,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nc_luts_path = xsarsea.get_test_file('xsarsea_luts')\n",
-    "nc_luts_path = \"/home/vincelhx/Documents/autoentreprise/IFREMER/xsarsea_luts\"\n",
-    "windspeed.register_nc_luts(nc_luts_path)"
+    "nc_luts_path = xsarsea.get_test_file('nc_luts_reduce')\n",
+    "windspeed.register_nc_luts(nc_luts_path)\n",
+    "nc_luts_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8daa945-0b8c-4c65-8459-0ff2acb1b38d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed.available_models()"
    ]
   },
   {
@@ -306,7 +347,8 @@
     "        sarwing_ds.owiIncidenceAngle,\n",
     "        sarwing_ds.owiNrcs_cross,\n",
     "        dsig_cr=dsig_cr,\n",
-    "        model='cmodms1ahw')\n",
+    "        model='nc_lut_sarwing_lut_cmodms1ahw',\n",
+    "        **kwargs)\n",
     "windspeed_cr = np.abs(windspeed_cr)"
    ]
   },
@@ -359,6 +401,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0854d7f",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "af0841b0-b5a4-42d8-994d-360cecd32797",
@@ -372,7 +420,8 @@
     "        sarwing_ds.owiNrcs_cross,\n",
     "        ancillary_wind=-np.conj(sarwing_ds.owi_ancillary_wind),\n",
     "        dsig_cr = dsig_cr,\n",
-    "        model=('cmod5n','cmodms1ahw'))\n",
+    "        model=('cmod5n','cmodms1ahw'),\n",
+    "        **kwargs)\n",
     "windspeed_co = np.abs(wind_co)\n",
     "windspeed_dual =  np.abs(wind_dual)"
    ]
@@ -491,14 +540,6 @@
     "    hv.Image(normalize_angle(angle_diff)).opts(cmap='jet', clim=(-5,5), title='xsarsea-reference\\nmean=%.4f std=%.4f' % (np.mean(angle_diff), np.std(angle_diff)))\n",
     ").opts(hv.opts.Image(colorbar=True, tools=['hover']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "babf36b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
