--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ddb8b3b-5e67-4dc2-b36b-e234510a80ff",
+   "metadata": {},
+   "source": [
+    "> .. warning::\n",
+    "   **Use of ancillary wind**\n",
+    "> On this notebook, we changed from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `sarwing_ds.owi_ancillary_wind`` ; then it won't match sarwing results anymore"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc7e5e16-f320-4641-856e-43584913416f",
@@ -190,7 +200,7 @@
    "outputs": [],
    "source": [
     "### Loading dataset & merging ancillary\n",
-    "xsar_obj_1000m = xsar.Sentinel1Dataset(s1meta, resolution='1000m')"
+    "xsar_obj = xsar.Sentinel1Dataset(s1meta, resolution='1000m')"
    ]
   },
   {
@@ -200,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_1000m = xsar_obj_1000m.datatree['measurement'].to_dataset()\n",
-    "dataset_1000m = dataset_1000m.rename(map_model)"
+    "dataset = xsar_obj.datatree['measurement'].to_dataset()\n",
+    "dataset = dataset.rename(map_model)"
    ]
   },
   {
@@ -224,9 +234,9 @@
    "outputs": [],
    "source": [
     "### Variables of interest \n",
-    "#xsar_obj_1000m.dataset['land_mask'].values = cv2.dilate(xsar_obj_1000m.dataset['land_mask'].values.astype('uint8'),np.ones((3,3),np.uint8),iterations = 3)\n",
-    "#xsar_obj_1000m.dataset['sigma0_ocean'] = xr.where(xsar_obj_1000m.dataset['land_mask'], np.nan, xsar_obj_1000m.dataset['sigma0'].compute()).transpose(*xsar_obj_1000m.dataset['sigma0'].dims)\n",
-    "#xsar_obj_1000m.dataset['sigma0_ocean'] = xr.where(xsar_obj_1000m.dataset['sigma0_ocean'] <= 0, 1e-15, xsar_obj_1000m.dataset['sigma0_ocean'])"
+    "#xsar_obj.dataset['land_mask'].values = cv2.dilate(xsar_obj.dataset['land_mask'].values.astype('uint8'),np.ones((3,3),np.uint8),iterations = 3)\n",
+    "#xsar_obj.dataset['sigma0_ocean'] = xr.where(xsar_obj.dataset['land_mask'], np.nan, xsar_obj.dataset['sigma0'].compute()).transpose(*xsar_obj.dataset['sigma0'].dims)\n",
+    "#xsar_obj.dataset['sigma0_ocean'] = xr.where(xsar_obj.dataset['sigma0_ocean'] <= 0, 1e-15, xsar_obj.dataset['sigma0_ocean'])"
    ]
   },
   {
@@ -236,10 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_1000m['sigma0_ocean'] = xr.where(dataset_1000m['sigma0'] <= 0, 1e-15, xsar_obj_1000m.dataset['sigma0'])\n",
-    "dataset_1000m['ancillary_wind_direction'] = (90. - np.rad2deg(np.arctan2(dataset_1000m.model_V10, dataset_1000m.model_U10)) + 180) % 360\n",
-    "dataset_1000m['ancillary_wind_speed'] = np.sqrt(dataset_1000m['model_U10']**2+dataset_1000m['model_V10']**2)\n",
-    "dataset_1000m['ancillary_wind'] = dataset_1000m.ancillary_wind_speed * np.exp(1j * xsarsea.dir_geo_to_sample(dataset_1000m.ancillary_wind_direction, dataset_1000m.ground_heading)) # ref antenna"
+    "dataset['sigma0_ocean'] = xr.where(dataset['sigma0'] <= 0, 1e-15, xsar_obj.dataset['sigma0'])\n",
+    "dataset['ancillary_wind_direction'] = (90. - np.rad2deg(np.arctan2(dataset.model_V10, dataset.model_U10)) + 180) % 360\n",
+    "dataset['ancillary_wind_speed'] = np.sqrt(dataset['model_U10']**2+dataset['model_V10']**2)\n",
+    "dataset['ancillary_wind'] = dataset.ancillary_wind_speed * np.exp(1j * xsarsea.dir_geo_to_sample(dataset.ancillary_wind_direction, dataset.ground_heading)) # ref antenna"
    ]
   },
   {
@@ -249,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(dataset_1000m['sigma0_ocean'].sel(pol='VH')).opts(colorbar=True,cmap='binary',width=425, height=400, tools = ['hover'], title = \"sigma0 VH\")"
+    "hv.Image(dataset['sigma0_ocean'].sel(pol='VH')).opts(colorbar=True,cmap='binary',width=425, height=400, tools = ['hover'], title = \"sigma0 VH\")"
    ]
   },
   {
@@ -278,6 +288,7 @@
    "outputs": [],
    "source": [
     "apply_flattening = True\n",
+    "GMF_VV_NAME = \"cmod5n\"\n",
     "GMF_VH_NAME = \"gmf_s1_v2\""
    ]
   },
@@ -296,13 +307,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nesz_cr = dataset_1000m.nesz.isel(pol=1) #(no_flattening)\n",
+    "nesz_cr = dataset.nesz.isel(pol=1) #(no_flattening)\n",
     "if apply_flattening : \n",
-    "    dataset_1000m=dataset_1000m.assign(nesz_VH_final=(['line','sample'],windspeed.nesz_flattening(nesz_cr, dataset_1000m.incidence)))\n",
-    "    dataset_1000m['nesz_VH_final'].attrs[\"comment\"] = 'nesz has been flattened using windspeed.nesz_flattening'\n",
+    "    dataset=dataset.assign(nesz_VH_final=(['line','sample'],windspeed.nesz_flattening(nesz_cr, dataset.incidence)))\n",
+    "    dataset['nesz_VH_final'].attrs[\"comment\"] = 'nesz has been flattened using windspeed.nesz_flattening'\n",
     "else :\n",
-    "    dataset_1000m=dataset_1000m.assign(nesz_VH_final=(['line','sample'],nesz_cr.values))\n",
-    "    dataset_1000m['nesz_VH_final'].attrs[\"comment\"] = 'nesz has not been flattened'"
+    "    dataset=dataset.assign(nesz_VH_final=(['line','sample'],nesz_cr.values))\n",
+    "    dataset['nesz_VH_final'].attrs[\"comment\"] = 'nesz has not been flattened'"
    ]
   },
   {
@@ -320,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dsig_cr = windspeed.get_dsig(\"gmf_s1_v2\", dataset_1000m.incidence,dataset_1000m.sigma0_ocean.sel(pol='VH'),dataset_1000m.nesz_VH_final)"
+    "dsig_cr = windspeed.get_dsig(\"gmf_s1_v2\", dataset.incidence,dataset.sigma0_ocean.sel(pol='VH'),dataset.nesz_VH_final)"
    ]
   },
   {
@@ -329,6 +340,34 @@
    "metadata": {},
    "source": [
     "### get windspeed & direction in dfferent polarizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99949fd6-9950-4be8-b9c1-3b906f60b1b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0368ca66-838c-45b6-bc9d-55919f812c52",
+   "metadata": {},
+   "source": [
+    "define kwargs to parameter LUT resolution\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf38d26-4f78-4f46-b2b0-12b111b5c746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kwargs = {\"wspd_step\" : 0.1, \"inc_step\" : 0.1, \"phi_step\" : 1.0, \"resolution\": \"high\"}"
    ]
   },
   {
@@ -349,17 +388,18 @@
    "outputs": [],
    "source": [
     "wind_co, wind_dual = windspeed.invert_from_model(\n",
-    "        dataset_1000m.incidence,\n",
-    "        dataset_1000m.sigma0_ocean.isel(pol=0),\n",
-    "        dataset_1000m.sigma0_ocean.isel(pol=1),\n",
-    "        ancillary_wind=-np.conj(dataset_1000m['ancillary_wind']),\n",
+    "        dataset.incidence,\n",
+    "        dataset.sigma0_ocean.isel(pol=0),\n",
+    "        dataset.sigma0_ocean.isel(pol=1),\n",
+    "        ancillary_wind=dataset['ancillary_wind'],\n",
     "        dsig_cr = dsig_cr,\n",
-    "        model=('cmod5n','cmodms1ahw'))\n",
+    "        model=(GMF_VV_NAME,GMF_VH_NAME),\n",
+    "        ** kwargs)\n",
     "\n",
-    "dataset_1000m[\"windspeed_co\"] = np.abs(wind_co)\n",
-    "dataset_1000m[\"windspeed_dual\"] = np.abs(wind_dual)\n",
-    "dataset_1000m['winddir_co'] = (90 - (np.angle(-np.conj(wind_co), deg=True)) + dataset_1000m.ground_heading) % 360\n",
-    "dataset_1000m['winddir_dual'] = (90 - (np.angle(-np.conj(wind_dual), deg=True)) + dataset_1000m.ground_heading) % 360"
+    "dataset[\"windspeed_co\"] = np.abs(wind_co)\n",
+    "dataset[\"windspeed_dual\"] = np.abs(wind_dual)\n",
+    "dataset['winddir_co'] = (90 - (np.angle(-np.conj(wind_co), deg=True)) + dataset.ground_heading) % 360\n",
+    "dataset['winddir_dual'] = (90 - (np.angle(-np.conj(wind_dual), deg=True)) + dataset.ground_heading) % 360"
    ]
   },
   {
@@ -381,12 +421,13 @@
    "outputs": [],
    "source": [
     "windspeed_cr = windspeed.invert_from_model(\n",
-    "    dataset_1000m.incidence.values,\n",
-    "    dataset_1000m.sigma0_ocean.isel(pol=1).values,\n",
+    "    dataset.incidence.values,\n",
+    "    dataset.sigma0_ocean.isel(pol=1).values,\n",
     "    dsig_cr = dsig_cr.values,\n",
-    "    model=GMF_VH_NAME)\n",
+    "    model=GMF_VH_NAME,\n",
+    "    ** kwargs)\n",
     "\n",
-    "dataset_1000m = dataset_1000m.assign(\n",
+    "dataset = dataset.assign(\n",
     "    windspeed_cross=(['line', 'sample'], windspeed_cr))"
    ]
   },
@@ -405,9 +446,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(dataset_1000m.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
-    "hv.Image(dataset_1000m.windspeed_cross, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
-    "hv.Image(dataset_1000m.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425)"
+    "hv.Image(dataset.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
+    "hv.Image(dataset.windspeed_cross, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
+    "hv.Image(dataset.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425)"
    ]
   },
   {
@@ -425,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_ds = dataset_1000m.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
+    "sub_ds = dataset.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
     "\n",
     "vectorfield = hv.VectorField(\n",
     "    (\n",
@@ -435,7 +476,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "hv.Image(dataset_1000m.windspeed_dual, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
+    "hv.Image(dataset.windspeed_dual, kdims=['sample','line']).opts(title='speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
    ]
   },
   {
@@ -445,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_ds = dataset_1000m.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
+    "sub_ds = dataset.sel(pol='VV').isel(sample=slice(None, None, 10), line=slice(None, None, 10))\n",
     "\n",
     "vectorfield = hv.VectorField(\n",
     "    (\n",
@@ -455,7 +496,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "hv.Image(dataset_1000m.ancillary_wind_speed, kdims=['sample','line']).opts(title='ECMWF speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
+    "hv.Image(dataset.ancillary_wind_speed, kdims=['sample','line']).opts(title='ECMWF speed and dir', clim=(0,50), cmap='jet') * vectorfield\n"
    ]
   },
   {
@@ -483,8 +524,8 @@
    "source": [
     "# prepare dataset for netcdf export\n",
     "\n",
-    "dataset_1000m['sigma0_ocean_VV'] = dataset_1000m['sigma0_ocean'].sel(pol='VV')\n",
-    "dataset_1000m['sigma0_ocean_VH'] = dataset_1000m['sigma0_ocean'].sel(pol='VH')\n",
+    "dataset['sigma0_ocean_VV'] = dataset['sigma0_ocean'].sel(pol='VV')\n",
+    "dataset['sigma0_ocean_VH'] = dataset['sigma0_ocean'].sel(pol='VH')\n",
     "\n",
     "\n",
     "black_list = ['model_U10', 'model_V10', 'digital_number', 'gamma0_raw', 'negz',\n",
@@ -492,8 +533,8 @@
     "              'gamma0', 'time', 'sigma0', 'nesz', 'sigma0_raw', 'sigma0_ocean', 'altitude', 'elevation',\n",
     "              'nd_co', 'nd_cr']\n",
     "\n",
-    "variables = list(set(dataset_1000m) - set(black_list))\n",
-    "dataset_1000m = dataset_1000m[variables]"
+    "variables = list(set(dataset) - set(black_list))\n",
+    "dataset = dataset[variables]"
    ]
   },
   {
@@ -511,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del dataset_1000m['ancillary_wind']"
+    "del dataset['ancillary_wind']"
    ]
   },
   {
@@ -521,7 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_1000 = dataset_1000m.compute()\n",
+    "ds_1000 = dataset.compute()\n",
     "ds_1000"
    ]
   },
@@ -534,6 +575,14 @@
    "source": [
     "#ds_1000.to_netcdf(\"my_L2_product\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef458c7-ddcf-4ab9-98f2-cbe2157377c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
