--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -398,8 +398,8 @@
     "\n",
     "dataset[\"windspeed_co\"] = np.abs(wind_co)\n",
     "dataset[\"windspeed_dual\"] = np.abs(wind_dual)\n",
-    "dataset['winddir_co'] = (90 - (np.angle(-np.conj(wind_co), deg=True)) + dataset.ground_heading) % 360\n",
-    "dataset['winddir_dual'] = (90 - (np.angle(-np.conj(wind_dual), deg=True)) + dataset.ground_heading) % 360"
+    "dataset['winddir_co'] = (90 - np.angle(wind_co, deg=True) + dataset.ground_heading) % 360\n",
+    "dataset['winddir_dual'] = (90 - np.angle(wind_dual, deg=True) + dataset.ground_heading) % 360"
    ]
   },
   {
@@ -580,6 +580,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0ef458c7-ddcf-4ab9-98f2-cbe2157377c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ba99aa5-ad0c-48ca-afbb-ec454c4720e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99d681b-fc05-4dde-93d5-2790c2f0bceb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d8da25-2b67-4398-8f54-fd3be7b376b2",
    "metadata": {},
    "outputs": [],
    "source": []
