detrend + dsig_sarwing_lut_cmodms1ahw

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -51,11 +51,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f370d8c1-c1a8-46a9-bb75-c9386068156a",
+   "id": "29afbe30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xsarsea.windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+    "xsarsea.windspeed.available_models()"
    ]
   },
   {
