--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -138,7 +138,7 @@
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convention\n",
-    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_geo(np.rad2deg(streaks['angle']), streaks_geo['ground_heading']) \n",
+    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_meteo(np.rad2deg(streaks['angle']), streaks_geo['ground_heading']) \n",
     "\n",
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
@@ -228,7 +228,7 @@
    "source": [
     "#### Convertion between image convention and geographic convention\n",
     "\n",
-    "see [xsarsea.dir_geo_to_sample](../basic_api.rst#xsarsea.dir_geo_to_sample) and [xsarsea.dir_sample_to_geo](../basic_api.rst#xsarsea.dir_sample_to_geo)\n",
+    "see [xsarsea.dir_meteo_to_sample](../basic_api.rst#xsarsea.dir_meteo_to_sample) and [xsarsea.dir_sample_to_meteo](../basic_api.rst#xsarsea.dir_sample_to_meteo)\n",
     "\n"
    ]
   },
