--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "Ecmwf wind is stored in owi file in *geographical* (deg N/S) convention. `xsarsea.windspeed` need it relative to *sample* (ie antenna), as a complex number.\n",
     "\n",
-    "We use [xsarsea.dir_geo_to_sample](../basic_api.rst#xsarsea.dir_geo_to_sample) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to sample, using `sarwing_ds.owiHeading`\n"
+    "We use [xsarsea.dir_meteo_to_sample](../basic_api.rst#xsarsea.dir_meteo_to_sample) to convert `sarwing_ds.owiEcmwfWindDirection` (deg) to radians, relative to sample, using `sarwing_ds.owiHeading`\n"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.dir_geo_to_sample(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
+    "owi_ecmwf_wind = sarwing_ds.owiEcmwfWindSpeed * np.exp(1j* xsarsea.dir_meteo_to_sample(sarwing_ds.owiEcmwfWindDirection, sarwing_ds.owiHeading))\n",
     "sarwing_ds = xr.merge([\n",
     "    sarwing_ds,\n",
     "    owi_ecmwf_wind.to_dataset(name='owi_ancillary_wind'),\n",
@@ -127,7 +127,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_sarwing_ds.sample, sub_sarwing_ds.line,\n",
-    "        xsarsea.dir_geo_to_sample(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
+    "        xsarsea.dir_meteo_to_sample(sub_sarwing_ds.owiEcmwfWindDirection, sub_sarwing_ds.owiHeading),\n",
     "        sub_sarwing_ds.owiEcmwfWindSpeed\n",
     "    )\n",
     ")\n",
@@ -478,7 +478,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_sarwing_ds.sample, sub_sarwing_ds.line,\n",
-    "        xsarsea.dir_geo_to_sample(sarwing_ds[\"winddir_dual\"] ,sub_sarwing_ds.owiHeading),\n",
+    "        xsarsea.dir_meteo_to_sample(sarwing_ds[\"winddir_dual\"] ,sub_sarwing_ds.owiHeading),\n",
     "        np.abs(wind_dual).isel(line=slice(None, None, 10), sample=slice(None, None, 10))\n",
     "    )\n",
     ")\n",
@@ -506,7 +506,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_sarwing_ds.sample, sub_sarwing_ds.line,\n",
-    "        xsarsea.dir_geo_to_sample(sub_sarwing_ds.owiWindDirection ,sub_sarwing_ds.owiHeading),\n",
+    "        xsarsea.dir_meteo_to_sample(sub_sarwing_ds.owiWindDirection ,sub_sarwing_ds.owiHeading),\n",
     "        sub_sarwing_ds.owiWindSpeed\n",
     "    )\n",
     ")\n",
