--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -249,7 +249,7 @@
     "dataset['sigma0_ocean'] = xr.where(dataset['sigma0'] <= 0, 1e-15, xsar_obj.dataset['sigma0'])\n",
     "dataset['ancillary_wind_direction'] = (90. - np.rad2deg(np.arctan2(dataset.model_V10, dataset.model_U10)) + 180) % 360\n",
     "dataset['ancillary_wind_speed'] = np.sqrt(dataset['model_U10']**2+dataset['model_V10']**2)\n",
-    "dataset['ancillary_wind'] = dataset.ancillary_wind_speed * np.exp(1j * xsarsea.dir_geo_to_sample(dataset.ancillary_wind_direction, dataset.ground_heading)) # ref antenna"
+    "dataset['ancillary_wind'] = dataset.ancillary_wind_speed * np.exp(1j * xsarsea.dir_meteo_to_sample(dataset.ancillary_wind_direction, dataset.ground_heading)) # ref antenna"
    ]
   },
   {
@@ -471,7 +471,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_ds.sample, sub_ds.line,\n",
-    "        xsarsea.dir_geo_to_sample(sub_ds.winddir_dual,sub_ds.ground_heading),\n",
+    "        xsarsea.dir_meteo_to_sample(sub_ds.winddir_dual,sub_ds.ground_heading),\n",
     "        sub_ds.windspeed_dual\n",
     "    )\n",
     ")\n",
@@ -491,7 +491,7 @@
     "vectorfield = hv.VectorField(\n",
     "    (\n",
     "        sub_ds.sample, sub_ds.line,\n",
-    "        xsarsea.dir_geo_to_sample(sub_ds.ancillary_wind_direction,sub_ds.ground_heading),\n",
+    "        xsarsea.dir_meteo_to_sample(sub_ds.ancillary_wind_direction,sub_ds.ground_heading),\n",
     "        sub_ds.ancillary_wind_speed\n",
     "    )\n",
     ")\n",
