delete mention of 'gmf convention' in code ; not in .ipynb yet

--- a/docs/examples/windspeed_inversion.ipynb
+++ b/docs/examples/windspeed_inversion.ipynb
@@ -18,7 +18,7 @@
     "> .. warning::\n",
     "   **Use of ancillary wind**\n",
     "\n",
-    "> We suggest to go from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `sarwing_ds.owi_ancillary_wind`` ; then it won't match sarwing results anymore\n",
+    "> We suggest to go from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `ancillary_wind = sarwing_ds.owi_ancillary_wind` ; then it won't match sarwing results anymore\n",
     "\n"
    ]
   },
