added register_luts() fct

--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -55,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "xsarsea.windspeed.gmfs.GmfModel.activate_gmfs_impl()\n",
     "xsarsea.windspeed.available_models()"
    ]
   },
